--- a/css/calc.css
+++ b/css/calc.css
@@ -62,7 +62,7 @@
     color:#000000;
 }
 
-.carousel-inner > .item > img,
+.carousel-inner > .item, .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
     width: 100%;
     margin: auto;
